--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 ws = null;
             }
 
-            ws = new WebSocket('ws://localhost:8000/ws');
+            ws = new WebSocket('ws://20.6.131.113:8000/ws');
             console.log('Connecting to WebSocket...');
 
             ws.onopen = () => {
